syntax = "proto3";
package authservice;

service AuthService {
    rpc SignIn  (AuthRequest)   returns (AuthResponse);
    rpc SignUp  (AuthRequest)   returns (AuthResponse);
    rpc Check   (Token)         returns (TokenInfo);  
}

message AuthRequest {
    string username = 1;
    string password = 2;
}

message AuthResponse {
    string token = 1;
    string error = 2;
}

message Token {
    string token = 1;
}

message TokenInfo {
    string uid      = 1;
    string username = 2;
    string role     = 3;
    string error    = 4;
}
